--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
+  background-color: #000000;
 }
 
 #three-canvas-container {
